# Elite_Robots_CS_SDK

./: CMakeLists.txt  Changelog.cn.md  Changelog.md  README.cn.md  README.md  elite-cs-series-sdkConfig.cmake.in  elite_cs_series_sdkConfig.cmake.in  package.xml
debian/: changelog  control
doc/API/cn/: API.cn.md  ClassLoader.cn.md  EliteDriver.cn.md  EliteDriverConfig.cn.md  KinematicsBase.cn.md  PoseAlgebraBase.cn.md  PrimaryPort.cn.md  RTSI.cn.md  RobotException.cn.md  SerialCommunication.cn.md
doc/API/en/: API.en.md  ClassLoader.en.md  EliteDriver.en.md  EliteDriverConfig.en.md  KinematicsBase.en.md  PoseAlgebraBase.en.md  PrimaryPort.en.md  RTSI.en.md  RobotException.en.md  SerialCommunication.en.md
doc/BuildGuide/: BuildGuide.cn.md  BuildGuide.en.md
doc/MessageFormat/: MessageFormat.cn.md
doc/UserGuide/cn/: ClassLoader-Plugin.cn.md  EliteDriver.cn.md  Get-Robot-State.cn.md  Kinematics-Plugin.cn.md  Let-Robot-Move.cn.md  Log.cn.md  Servoj-Move.cn.md  UserGuide.cn.md
doc/UserGuide/en/: ClassLoader-Plugin.en.md  EliteDriver.en.md  Get-Robot-State.en.md  Kinematics-Plugin.en.md  Let-Robot-Move.en.md  Log.en.md  Servoj-Move.en.md  UserGuide.en.md
example/: CMakeLists.txt  connect_robot_test.cpp  dashboard_example.cpp  freedrive_example.cpp  kinematics_example.cpp  pose_algebra_example.cpp  pose_example.cpp  primary_example.cpp  rtsi_example.cpp  serial_example.cpp  servo_example.cpp  servoj_cartesian_example.cpp  servoj_example.cpp  servoj_plan_example.cpp  speedj_example.cpp  speedl_example.cpp  trajectory_example.cpp
include/: EliteException.hpp  EliteOptions.hpp.in
include/ClassLoader/: ClassLoader.hpp  ClassRegisterMacro.hpp  ClassRegistry.hpp
include/Common/: EndianUtils.hpp  MathUtils.hpp  RtUtils.hpp  SharedLibrary.hpp  SshUtils.hpp  StringUtils.hpp  TcpClient.hpp  TcpCommon.hpp  TcpServer.hpp  TcpServerSharedPoller.hpp  Utils.hpp
include/Control/: ControlCommon.hpp  ReverseInterface.hpp  ReversePort.hpp  ScriptCommandInterface.hpp  ScriptSender.hpp  TrajectoryInterface.hpp
include/Dashboard/: DashboardClient.hpp
include/Elite/: ControlMode.hpp  ControllerLog.hpp  DataType.hpp  DefaultLogHandler.hpp  EliteDriver.hpp  Log.hpp  Logger.hpp  RemoteUpdate.hpp  RemoteUpgrade.hpp  RobotException.hpp  SerialCommunication.hpp  VersionInfo.hpp
include/InterpreterPort/: InterpreterImpl.hpp  InterpreterInterface.hpp
include/KinematicsBase/: KinematicsBase.hpp
include/PoseAlgebraBase/: PoseAlgebraBase.hpp
include/Primary/: PrimaryPackage.hpp  PrimaryPort.hpp  PrimaryPortInterface.hpp  RobotConfPackage.hpp
include/Rtsi/: RtsiClient.hpp  RtsiClientInterface.hpp  RtsiIOInterface.hpp  RtsiRecipe.hpp  RtsiRecipeInternal.hpp
plugin/PoseAlgebra/: CMakeLists.txt
plugin/PoseAlgebra/EigenPoseAlgebra/: CMakeLists.txt
plugin/PoseAlgebra/EigenPoseAlgebra/include/: EigenPoseAlgebra.hpp
plugin/PoseAlgebra/EigenPoseAlgebra/source/: EigenPoseAlgebra.cpp
plugin/PoseAlgebra/ElitePoseAlgebra/: CMakeLists.txt
plugin/PoseAlgebra/ElitePoseAlgebra/include/: ElitePoseAlgebra.hpp
plugin/PoseAlgebra/ElitePoseAlgebra/source/: ElitePoseAlgebra.cpp
plugin/kinematics/: CMakeLists.txt
plugin/kinematics/KdlKinematicsPlugin/: CMakeLists.txt
plugin/kinematics/KdlKinematicsPlugin/include/: KdlKinematicsPlugin.hpp
plugin/kinematics/KdlKinematicsPlugin/source/: KdlKinematicsPlugin.cpp
source/ClassLoader/: ClassLoader.cpp  ClassRegistry.cpp
source/Common/: EliteException.cpp  MathUtils.cpp  RtUtils.cpp  SharedLibrary.cpp  SshUtils.cpp  StringUtils.cpp  TcpClient.cpp  TcpCommon.cpp  TcpServer.cpp  TcpServerSharedPoller.cpp
source/Control/: ReverseInterface.cpp  ScriptCommandInterface.cpp  ScriptSender.cpp  TrajectoryInterface.cpp
source/Dashboard/: DashboardClient.cpp
source/Elite/: EliteDriver.cpp  Logger.cpp  RemoteUpdate.cpp  RemoteUpgrade.cpp  SerialCommunication.cpp  VersionInfo.cpp
source/InterpreterPort/: InterpreterInterface.cpp
source/Primary/: PrimaryPort.cpp  PrimaryPortInterface.cpp  RobotConfPackage.cpp
source/Rtsi/: RtsiClient.cpp  RtsiClientInterface.cpp  RtsiIOInterface.cpp  RtsiRecipeInternal.cpp
source/resources/: external_control.script
test/: CMakeLists.txt  ClassLoaderPluginLifecycleTest.cpp  EliteDriverConfigTest.cpp  EliteDriverReconstructTest.cpp  OtaTest.cpp  PoseAlgebraTest.cpp  PrimaryPortTest.cpp  ReverseInterfaceTest.cpp  ScriptCommnadInterfaceTest.cpp  ScriptSenderTest.cpp  TcpCommonTcpClientIOTest.cpp  TcpServerPortOccupyTest.cpp  TcpServerTest.cpp  TrajectoryInterfaceTest.cpp
test/integration/: CMakeLists.txt  ExtrapolateConvergenceIntegrationTest.cpp
test/integration/common/: SimpleArgParser.cpp  SimpleArgParser.hpp
